netcfg (1.101) UNRELEASED; urgency=low

  * Skip reachability test for empty gateway. (Closes: #690868)

 -- Philipp Kern <pkern@debian.org>  Sat, 03 Nov 2012 21:24:15 +0100

netcfg (1.100) unstable; urgency=low

  * Temporarily revert the activation of IPv6 privacy extensions
    to cope with network-manager not commenting out the interfaces
    stanza correctly.

 -- Philipp Kern <pkern@debian.org>  Sun, 28 Oct 2012 10:16:17 +0100

netcfg (1.99) unstable; urgency=low

  [ Philipp Kern ]
  * netcfg.c (main): Remove a local definition of hostname.
    (Closes: #690330)
  * Override the hostname found via DHCP or DNS with the preseeded
    value of the new variable netcfg/hostname, if set. Patch by
    Floris Bos. (Closes: #606636)
  * Add myself to uploaders.

  [ Updated translations ]
  * Amharic (am.po) by Tegegne Tefera
  * Asturian (ast.po) by Mikel González
  * Welsh (cy.po) by Dafydd Tomos
  * Esperanto (eo.po) by Felipe Castro
  * Spanish (es.po) by Javier Fernández-Sanguino
  * Galician (gl.po) by Jorge Barreiro
  * Kannada (kn.po) by Prabodh
  * Serbian (sr.po) by Karolina Kalic
  * Tamil (ta.po) by Dr.T.Vasudevan
  * Ukrainian (uk.po) by Yuri Chornoivan

 -- Philipp Kern <pkern@debian.org>  Fri, 26 Oct 2012 11:11:53 +0200

netcfg (1.98) unstable; urgency=low

  * Re-upload without cruft from my checkout, oops.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 05 Oct 2012 00:57:08 +0200

netcfg (1.97) unstable; urgency=low

  * Fix missing build-dep on check for the test suite.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 04 Oct 2012 23:26:58 +0200

netcfg (1.96) unstable; urgency=low

  [ Philipp Kern ]
  * Makefile: set DEB_HOST_ARCH{,_OS} conditionally
  * autoconfig.c: kill dhcp6c after timeout unless a lease is obtained
  * Fix the dns- entries in /etc/network/interfaces. (Closes: #689474)
    Patch by Matthew L. Dailey.
  * Run the test suite during build.

  [ Christian Perrier ]
  * [l10n] Drop use of sublevel 6 and move "recently" added