@@ -1,6 +1,9 @@
 netcfg (1.101) UNRELEASED; urgency=low
 
   * Skip reachability test for empty gateway. (Closes: #690868)
+  * Obey netcfg/disable_dhcp for compatibility reasons and disable
+    autoconfig. There's no need to break old preseeding scripts,
+    as the intent is clear.
 
  -- Philipp Kern <pkern@debian.org>  Sat, 03 Nov 2012 21:24:15 +0100
 
